<resources>
    <string name="app_name">Chat</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="select_image">Select image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="toast_empty_profile_image">Please select profile image</string>
    <string name="set_error_empty_name">Name can\'t be empty</string>
    <string name="set_error_empty_email">Email can\'t be empty</string>
    <string name="set_error_empty_password">Password can\'t be empty</string>
    <string name="set_error_empty_confirm_password">Confirm password can\'t be empty</string>
    <string name="set_error_invalid_email">Email is invalid</string>
    <string name="set_error_not_match_password">Password and confirm password must be the same</string>
    <string name="toast_something_wrong">Something wrong happened</string>
    <string name="set_error_email_already_use">The email address is already in use by another account</string>
    <string name="set_error_weak_password">The password is invalid it must 6 characters at least</string>
    <string name="change_image">Change image</string>
    <string name="check_email">We have sent an email with a confirmation link to your email address. Please check your email.</string>
    <string name="go_to_login">Go to login</string>
    <string name="login_failure">* Login failed. Incorrect email or password.</string>
    <string name="not_verify">* You are not allowed to login. You need to verify your email. Please check your email inbox.</string>
    <string name="back_to_login">Back to login</string>
    <string name="select_user">Select user</string>
    <string name="add_icon">Add icon</string>
    <string name="no_user">No user available</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_message">Search message…</string>
    <string name="offline">Offline</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="scan_this_code">Scan this QR code to add friend with me</string>
    <string name="add_friend">Add friend</string>
    <string name="please_type_a_valid_email">Please type a valid email</string>
    <string name="account_information">Account information</string>
    <string name="relationship_friend">Friend</string>
    <string name="relationship_stranger">Stranger</string>
    <string name="relationship_yourself">You</string>
    <string name="action_message">Message</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="unsent">Unsent</string>
    <string name="no_user_match">No users match your result</string>
    <string name="update_information">Update information</string>
    <string name="change_password">Change Password</string>
    <string name="recall_message">Recall your message</string>
</resources>