<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:importantForAccessibility="no"
            android:text="@string/welcome_back"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:importantForAccessibility="no"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondaryText"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_login_etInputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/activity_login_etInputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_13ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_login_btLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/activity_login_tvForgotPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textAlignment="viewStart"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_login_tvCreateAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_an_account"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>