<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingHorizontal="@dimen/_24sdp"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:importantForAccessibility="no"
            android:text="@string/account_information"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/activity_profile_ivProfile"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/activity_profile_tvSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="Change image"
            android:textColor="#4242AA"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_profile_etInputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/activity_profile_etInputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/_13ssp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_profile_btUpdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/update_information"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/activity_profile_pbSignUp"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_profile_btChangePassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/change_password"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/activity_profile_pbChangePassword"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>