<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FindUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_find_user_ctlHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_find_user_ivBack"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:text="@string/add_friend"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fragment_find_user_ivBack"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/fragment_find_user_rlBorderUserInformation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@color/colorBackgroundInformation"
        app:layout_constraintTop_toBottomOf="@id/fragment_find_user_ctlHeader">

        <RelativeLayout
            android:id="@+id/fragment_find_user_rlCurrentUserInformation"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:background="@drawable/background_current_user_information"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_find_user_tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/fragment_find_user_ivImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_centerInParent="true"
                app:riv_oval="true"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/scan_this_code"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_9sdp"
                tools:ignore="TextSizeCheck" />

        </RelativeLayout>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_find_user_tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/colorSearchUser"
        app:endIconMode="clear_text"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/fragment_find_user_flNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_find_user_rlBorderUserInformation"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_find_user_etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/fragment_find_user_flNext"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_chat_input"
        android:backgroundTint="@color/colorSearchUser"
        app:layout_constraintBottom_toBottomOf="@id/fragment_find_user_tilEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/fragment_find_user_tilEmail">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_find_user_ivNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_forward"
            app:tint="@color/colorWhite" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_find_user_ctlSearchedUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:visibility="gone"
        android:background="@drawable/background_searched_user"
        app:layout_constraintTop_toBottomOf="@id/fragment_find_user_tilEmail">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/fragment_find_user_ivSearchedProfileUser"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:padding="@dimen/_9sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/fragment_find_user_tvSearchedNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/fragment_find_user_ivSearchedProfileUser"
            app:layout_constraintStart_toEndOf="@id/fragment_find_user_ivSearchedProfileUser"
            app:layout_constraintTop_toTopOf="@id/fragment_find_user_ivSearchedProfileUser" />

        <TextView
            android:id="@+id/fragment_find_user_tvRelationship"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_relationship"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:textSize="@dimen/_9sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/fragment_find_user_tvSearchedNameUser"
            app:layout_constraintStart_toEndOf="@id/fragment_find_user_tvSearchedNameUser"
            app:layout_constraintTop_toTopOf="@id/fragment_find_user_tvSearchedNameUser" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>